--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
 
+    <string name="title_trending">Trending</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_trending_repos">Trending Repos</string>
 </resources>
