--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_trending">Trending</string>
     <string name="title_settings">Settings</string>
     <string name="title_trending_repos">Trending Repos</string>
+    <string name="processing">Loading..</string>
+    <string name="something_went_wrong">Something went wrong. Try again.</string>
+    <string name="no_repos">No Repositories found</string>
+    <string name="icon">icon</string>
 </resources>
